--- a/packages/windows/msi/McServInstaller/Product.wxs
+++ b/packages/windows/msi/McServInstaller/Product.wxs
@@ -3,7 +3,7 @@
   <Product Id="*" Name="McServ" Language="1033" Version="1.0.0.0" Manufacturer="McServ" UpgradeCode="0135830b-4d57-4395-88ed-7bc9933b2eaa">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-    <MediaTemplate />
+    <MediaTemplate EmbedCab="yes" />
     <Feature Id="ProductFeature" Title="McServ" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
