--- a/packages/windows/msi/McServInstaller/Product.wxs
+++ b/packages/windows/msi/McServInstaller/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*" Name="McServ" Language="1033" Version="$(env.VERSION)" Manufacturer="McServ" UpgradeCode="0135830b-4d57-4395-88ed-7bc9933b2eaa">
-    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate EmbedCab="yes" />
     <Feature Id="ProductFeature" Title="McServ" Level="1">
@@ -10,26 +10,26 @@
   </Product>
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
+      <Directory Id="ProgramFiles64Folder">
         <Directory Id="INSTALLFOLDER" Name="McServ" />
       </Directory>
     </Directory>
   </Fragment>
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-      <Component Id="ProductComponent">
-        <File Source="..\dart\mcserv.exe" />
+      <Component Id="ProductComponent" Win64="yes">
+        <File Source="..\dart\mcserv.exe"/>
       </Component>
-      <Component Id="LicenseComponent">
-            <File Source="..\..\LICENSE" />
+      <Component Id="LicenseComponent" Win64="yes">
+            <File Source="..\..\LICENSE"/>
       </Component>
-      <Component Id="ReadmeComponent">
-            <File Source="..\..\README.md" />
+      <Component Id="ReadmeComponent" Win64="yes">
+            <File Source="..\..\README.md"/>
       </Component>
-      <Component Id="VersionComponent">
-            <File Source="..\reports\version.txt" />
+      <Component Id="VersionComponent" Win64="yes">
+            <File Source="..\reports\version.txt"/>
       </Component>
-      <Component Id="PathVariable" Guid="{25c57a5e-28d5-425d-bbfb-8c28f132ce4e}">
+      <Component Id="PathVariable" Guid="{25c57a5e-28d5-425d-bbfb-8c28f132ce4e}" Win64="yes">
         <CreateFolder />
         <Environment Id="AddToPath" Name="PATH" Value="[INSTALLFOLDER]" Action="set" Part="last" System="yes" Permanent="no" />
       </Component>
